--- a/process.html
+++ b/process.html
@@ -30,7 +30,7 @@
       <div class="hr"></div>
 
       <p class="muted">При онлайн‑работе важно находиться в изолированном помещении, иметь включённую камеру и стабильное интернет‑соединение.</p>
-      <p class="muted">Сессии проводятся с компьютера или планшета — это помогает сохранить качество контакта и рабочий формат.</p>
+      <p class="muted">Сессии проводятся с компьютера или планшета — это позволяет сохранить качество контакта и рабочий формат.</p>
       <p class="muted">Между сессиями мы обычно общаемся только по организационным вопросам — это помогает сохранять рабочую рамку и устойчивость процесса.</p>
       <p class="muted">Если вы не можете прийти на сессию, пожалуйста, предупредите заранее. Сессия, отменённая менее чем за 24 часа, оплачивается.</p>
     </div>
@@ -63,7 +63,7 @@
           <li>соблюдение договорённостей и рамок терапии</li>
           <li>готовность свободно говорить о происходящем</li>
           <li>способность замечать и исследовать свои реакции</li>
-          <li>интерес к обсуждению того, как устроено переживание</li>
+          <li>интерес к обсуждению того, что психолог замечает и предлагает в процессе работы</li>
           <li>готовность обсуждать напряжение и сложные чувства</li>
           <li>готовность к постепенным изменениям</li>
         </ul>
@@ -77,7 +77,7 @@
         <ul class="list">
           <li>постоянная эмоциональная поддержка вне сессий</li>
           <li>интенсивное сопровождение при резких перепадах чувств или самоповреждении</li>
-          <li>медико‑психологическая помощь при проблеме химической зависимости</li>
+          <li>медико‑психологическая помощь при химической зависимости</li>
         </ul>
       </div>
     </div>
