--- a/process.html
+++ b/process.html
@@ -61,7 +61,7 @@
         <h3>На что мы опираемся</h3>
         <ul class="list">
           <li>соблюдение договорённостей и рамок терапии</li>
-          <li>готовность свободно говорить о происходящем</li>
+          <li>готовность свободно говорить о беспокоящих вас трудностях</li>
           <li>способность замечать и исследовать свои реакции</li>
           <li>интерес к обсуждению того, что психолог замечает и предлагает в процессе работы</li>
           <li>готовность обсуждать напряжение и сложные чувства</li>
