--- a/process.html
+++ b/process.html
@@ -32,7 +32,9 @@
       <p class="muted">При онлайн‑работе важно находиться в изолированном помещении, иметь включённую камеру и стабильное интернет‑соединение.</p>
       <p class="muted">Сессии проводятся с компьютера или планшета — это позволяет сохранить качество контакта и рабочий формат.</p>
       <p class="muted">Между сессиями мы обычно общаемся только по организационным вопросам — это помогает сохранять рабочую рамку и устойчивость процесса.</p>
-      <p class="muted">Если вы не можете прийти на сессию, пожалуйста, предупредите заранее. Сессия, отменённая менее чем за 24 часа, оплачивается.</p>
+      <p class="muted">Если вы не можете прийти на сессию, пожалуйста, предупредите заранее. Сессия, отменённая менее чем за 24 часа, оплачивается.
+      Сессия психотерапии проходит в формате диалога. Мы фокусируемся на понимании и исследовании ваших чувств, мыслей и реакций. Я работаю в подходе без инструкций, директивных рекомендаций, советов и домашних заданий.
+</p>
     </div>
 
     <div class="section">
