--- a/process.html
+++ b/process.html
@@ -29,7 +29,7 @@
       <p class="muted">Стоимость сессии — 5000 ₽ / 55 €, длительность — 50 минут.</p>
       <div class="hr"></div>
 
-      <p class="muted">При онлайн‑работе важно находиться в изолированном помещении, иметь включённую камеру и стабильное интернет‑соединение.</p>
+      <p class="muted">Онлайн-сессии проходят с включённой камерой и стабильным интернет-соединением, в изолированном помещении.</p>
       <p class="muted">Сессии проводятся с компьютера или планшета — это позволяет сохранить качество контакта и рабочий формат.</p>
       <p class="muted">Между сессиями мы обычно общаемся только по организационным вопросам — это помогает сохранять рабочую рамку и устойчивость процесса.</p>
       <p class="muted">Если вы не можете прийти на сессию, пожалуйста, предупредите заранее. Сессия, отменённая менее чем за 24 часа, оплачивается.</p>
@@ -65,7 +65,7 @@
           <li>соблюдение договорённостей и рамок терапии</li>
           <li>готовность свободно говорить о беспокоящих вас трудностях</li>
           <li>способность замечать и исследовать свои реакции</li>
-          <li>интерес к обсуждению того, что психолог замечает и предлагает в процессе работы</li>
+          <li>интерес к обсуждению того, что я замечаю и предлагаю в процессе работы</li>
           <li>готовность обсуждать напряжение и сложные чувства</li>
           <li>готовность к постепенным изменениям</li>
         </ul>
