--- a/education.html
+++ b/education.html
@@ -46,6 +46,13 @@
           — работа с расстройствами пищевого поведения с использованием когнитивно‑поведенческих подходов
         </div>
       </div>
+
+       <div class="edu-row">
+        <div class="muted"><strong>Дополнительная специализация</strong></div>
+        <div class="muted">
+          Моя профессиональная работа опирается на личную психотерапию (с 2016 года) и регулярную индивидуальную и групповую супервизию (с 2018 года).
+        </div>
+      </div>
     </div>
 
     <div class="section">
