--- a/education.html
+++ b/education.html
@@ -48,7 +48,7 @@
       </div>
 
        <div class="edu-row">
-        <div class="muted"><strong>Дополнительная специализация</strong></div>
+        <div class="muted"><strong></strong></div>
         <div class="muted">
           Моя профессиональная работа опирается на личную психотерапию (с 2016 года) и регулярную индивидуальную и групповую супервизию (с 2018 года).
         </div>
