--- a/education.html
+++ b/education.html
@@ -70,7 +70,7 @@
         <summary>Долгосрочное дополнительное образование</summary>
         <div class="muted">
           <p><strong>Русскоязычное общество терапии, фокусированной на переносе (РОТФП)</strong><br/>Терапия, фокусированная на переносе (TFP), статус кандидата — 2022–сейчас</p>
-          <p><strong>Московский институт гештальта и психодрамы</strong><br/>, сертифицирована — 2017–2022</p>
+          <p><strong>Московский институт гештальта и психодрамы</strong><br/>, Гештальт-терапия, сертифицирована — 2017–2022</p>
         </div>
       </details>
 
