--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <main class="container">
     <section class="grid-hero">
       <div class="photo">
-        <img src="./assets/portrait.jpg" alt="Портрет" />
+        <img src="./assets/portrait.png" alt="Портрет" />
       </div>
 
       <div>
