fixed education - singe column

--- a/education.html
+++ b/education.html
@@ -24,34 +24,43 @@
     <h2>Образование</h2>
 
     <div class="section">
-      <div class="edu-row">
-        <div class="muted"><strong>Базовое образование</strong></div>
-        <div>
-          <div>Клинический психолог</div>
-          <div class="muted">МГУ им. М. В. Ломоносова, факультет психологии — 2011–2017</div>
-        </div>
-      </div>
+      <div class="edu-block">
+  <h4>Базовое образование</h4>
+  <p>
+    Клинический психолог<br>
+    МГУ им. М. В. Ломоносова, факультет психологии<br>
+    2011–2017
+  </p>
+</div>
 
-      <div class="edu-row">
-        <div class="muted"><strong>Долгосрочная профессиональная подготовка</strong></div>
-        <div class="muted">
-          — гештальт‑терапия (Московский институт гештальта и психодрамы, сертифицирована)<br/>
-          — терапия, фокусированная на переносе (TFP) (Русскоязычное общество ТФП, статус кандидата)
-        </div>
-      </div>
+<div class="edu-block">
+  <h4>Долгосрочная профессиональная подготовка</h4>
+  <p>
+    Гештальт-терапия  
+    (Московский институт гештальта и психодрамы, сертифицирована)
+  </p>
+  <p>
+    Терапия, фокусированная на переносе (TFP)  
+    (Русскоязычное общество ТФП, статус кандидата)
+  </p>
+</div>
 
-      <div class="edu-row">
-        <div class="muted"><strong>Дополнительная специализация</strong></div>
-        <div class="muted">
-          — работа с расстройствами пищевого поведения с использованием когнитивно‑поведенческих подходов
-        </div>
-      </div>
+<div class="edu-block">
+  <h4>Дополнительная специализация</h4>
+  <p>
+    Работа с расстройствами пищевого поведения
+    с использованием когнитивно-поведенческих подходов
+  </p>
+</div>
 
-       <div class="edu-row">
-        <div class="muted"><strong></strong></div>
-        <div class="muted">
-          Моя профессиональная работа опирается на личную психотерапию (с 2016 года) и регулярную индивидуальную и групповую супервизию (с 2018 года).
-        </div>
+<div class="edu-block">
+  <p>
+    Моя профессиональная работа опирается на личную психотерапию
+    (с 2016 года) и регулярную индивидуальную и групповую супервизию
+    (с 2018 года).
+  </p>
+</div>
+
       </div>
     </div>
 
