--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <header>
     <div class="container">
       <nav class="nav">
+          <button class="burger" aria-label="Меню" aria-expanded="false">
+    ☰
+  </button>
   <ul class="nav-list">
     <li><a href="index.html">Главная</a></li>
     <li><a href="process.html">Процесс работы</a></li>
@@ -67,5 +70,15 @@
   <script>
     document.getElementById("y").textContent = new Date().getFullYear();
   </script>
+  <script>
+  const burger = document.querySelector('.burger');
+  const menu = document.querySelector('.nav-list');
+
+  burger.addEventListener('click', () => {
+    const isOpen = menu.classList.toggle('is-open');
+    burger.setAttribute('aria-expanded', isOpen);
+  });
+</script>
+
 </body>
 </html>
