--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
       <div>
         
-        <h1 class="hero-name">Психолог Анна Жеймо</h1>
-<p class="lead">Психотерапия для взрослых онлайн и очно в Санкт‑Петербурге.</p>
+        <h1 class="hero-name">Анна Жеймо</h1>
+<p class="lead">Психолог. Психотерапия для взрослых онлайн и очно в Санкт‑Петербурге.</p>
 
         <div class="meta">
           <span class="badge"><span class="dot"></span>Сертифицированный гештальт‑терапевт</span>
