add current menu item highligh, make margins consistent

--- a/contacts.html
+++ b/contacts.html
@@ -14,7 +14,7 @@
     <li><a href="index.html">Главная</a></li>
     <li><a href="process.html">Процесс работы</a></li>
     <li><a href="education.html">Образование</a></li>
-    <li><a href="contacts.html">Контакты</a></li>
+    <li><a href="contacts.html" aria-current="page">Контакты</a></li>
   </ul>
 </nav>
     </div>
@@ -23,7 +23,7 @@
   
 <main class="main">
   <div class="container">
-    <h1>Контакты</h1>
+    <h2>Контакты</h2>
     <div class="section">
       <p class="muted">Для записи на консультацию или уточняющих вопросов вы можете написать мне:</p>
       <p class="muted">
