--- a/education.html
+++ b/education.html
@@ -13,7 +13,7 @@
   <ul class="nav-list">
     <li><a href="index.html">Главная</a></li>
     <li><a href="process.html">Процесс работы</a></li>
-    <li><a href="education.html">Образование</a></li>
+    <li><a href="education.html" aria-current="page">Образование</a></li>
     <li><a href="contacts.html">Контакты</a></li>
   </ul>
 </nav>
