--- a/process.html
+++ b/process.html
@@ -12,7 +12,7 @@
       <nav class="nav">
   <ul class="nav-list">
     <li><a href="index.html">Главная</a></li>
-    <li><a href="process.html">Процесс работы</a></li>
+    <li><a href="process.html" aria-current="page">Процесс работы</a></li>
     <li><a href="education.html">Образование</a></li>
     <li><a href="contacts.html">Контакты</a></li>
   </ul>
