--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <nav class="nav">
   <ul class="nav-list">
-    <li><a href="index.html">Главная</a></li>
+    <li><a href="index.html" aria-current="page">Главная</a></li>
     <li><a href="process.html">Процесс работы</a></li>
     <li><a href="education.html">Образование</a></li>
     <li><a href="contacts.html">Контакты</a></li>
