--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Анна Жеймо, психолог</title>
+  <title>Анна Жеймо. Психолог</title>
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
@@ -28,7 +28,7 @@
 
       <div>
         
-        <h1 class="hero-name">Анна Жеймо - психолог</h1>
+        <h1 class="hero-name">Анна Жеймо, психолог</h1>
 <p class="lead">Психотерапия для взрослых онлайн и очно в Санкт‑Петербурге.</p>
 
         <div class="meta">
