--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <div class="hr"></div>
 
         <p class="muted">
-          Я работаю с человеческими трудностями — в отношениях, эмоциональной регуляции,
-          самооценке и деятельности — с людьми, которым важно понимать свою роль
+          Я работаю с человеческими трудностями в отношениях, эмоциональной регуляции,
+          самооценке и деятельности - с людьми, которым важно понимать свою роль
           в происходящем и искать способы изменений в собственной жизни.
         </p>
       </div>
